WhatsApp icon rebase

--- a/dev/pug/pages/contacts/contacts.pug
+++ b/dev/pug/pages/contacts/contacts.pug
@@ -9,8 +9,6 @@ section.section
                     a(href='mailto:manager@itc-media.ru', title='Электронная почта')._email manager@itc-media.ru
                 p._phone-wrap
                     a(href='tel:+78005512557', title='Телефон')._phone 8 (800) 551-25-57
-                    a(href='whatsapp://send/?phone=78005512557', title='WhatsApp')
-                        +icon('whatsapp', 'contacts-page__phone-icon')
                 p Бесплатно по России
                 p Работаем по будням с 9:00 до 18:00
 
@@ -20,6 +18,11 @@ section.section
                     ._dop-phone
                         p 106 бухгалтерия
                         p 104 тендерный отдел
+
+                p
+                    a(href='whatsapp://send/?phone=78005512557', title='WhatsApp')
+                        +icon('whatsapp', 'contacts-page__phone-icon')
+                        | Написать в WhatsApp
 
                 button.b-btn.-flat._btn Реквизиты
 
