--- a/dev/static/styles/modules/contacts-page.sass
+++ b/dev/static/styles/modules/contacts-page.sass
@@ -49,6 +49,7 @@
 .contacts-page__phone-icon
     width: 40px
     height: 40px
+    margin-right: 20px
 
 .contacts-page__dop-phones
     display: flex
@@ -58,6 +59,8 @@
 .contacts-page__dop-phone
     &:not(:last-child)
         margin-right: 15px
+    p
+        margin-bottom: 0 !important
 
 .contacts-page__address
     font-weight: 500
