Change tabs on contacts-page

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -2,27 +2,27 @@
     var socialIcons = [
         {
             name: 'Agima',
-            link: '#',
+            link: 'https://agima.partners/',
             icon: 'agima',
         },
         {
             name: 'РАЕК',
-            link: '#',
+            link: 'http://digital.raec.ru',
             icon: 'raek',
         },
         {
             name: 'FaceBook',
-            link: '#',
+            link: 'https://www.facebook.com/itcmediaru/',
             icon: 'fb',
         },
         {
             name: 'VK',
-            link: '#',
+            link: 'https://vk.com/itcmedia',
             icon: 'vk',
         },
         {
             name: 'Instagram',
-            link: '#',
+            link: 'https://www.instagram.com/itc_media/',
             icon: 'insta',
         },
     ]
@@ -30,7 +30,7 @@
 -
     var mainMenu = [
         {
-            name: 'Порфолио',
+            name: 'Наши кейсы',
             link: 'cases.html'
         },
         {
