Add popup estore

--- a/dev/pug/company.pug
+++ b/dev/pug/company.pug
@@ -8,6 +8,7 @@ block content
     include pages/company/about
     +pageSlider('Мероприятия', events)
     include pages/company/press
+    include modules/a4a
     +pageSlider('Корпоративная жизнь', corpLife)
     //- todo решить с вакансиями
     +taber(tabsHr, 'Вакансии', 'light', 'vacancies')
