--- a/dev/pug/modules/footer/footer.pug
+++ b/dev/pug/modules/footer/footer.pug
@@ -10,6 +10,9 @@ footer.b-footer
                 a(href= icon.link, title= icon.name)._icon
                     +icon(icon.icon, 'footer__social-icon')
 
+// Up button
+a.up-button.b-btn.-flat Наверх
+
 // Popups
 
 .overlay
