--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -66,11 +66,11 @@
             link: 'smm.html'
         },
         {
-            name: 'Поддержка сайтов',
+            name: 'Развитие сайта',
             link: 'site-support.html'
         },
         {
-            name: 'Разработка и развитие сайтов',
+            name: 'Разработка сайта',
             link: 'site-develop.html'
         },
     ]
