--- a/dev/static/styles/modules/header/header.sass
+++ b/dev/static/styles/modules/header/header.sass
@@ -143,6 +143,9 @@
         padding: 30px 25px !important
         background-color: rgba($grey, .9)
         backdrop-filter: blur(6px)
+    &__subcity
+        &:not(:last-child)
+            margin-bottom: 10px
 
 
     &__link
@@ -158,3 +161,5 @@
         +xs-block()
             font-size: 16px
             line-height: 22px
+
+@import "estore-line"
