--- a/dev/static/styles/modules/taber.sass
+++ b/dev/static/styles/modules/taber.sass
@@ -147,6 +147,15 @@
                 line-height: 20px
             &:not(:last-child)
                 margin-bottom: 20px
+        .price
+            font-size: 40px
+            line-height: 50px
+            margin-top: 32px
+            font-weight: 500
+            +xs-block()
+                font-size: 30px
+                line-height: 40px
+                margin-top: 24px
         ul
             list-style: none
 
