--- a/dev/static/styles/utils/fonts.sass
+++ b/dev/static/styles/utils/fonts.sass
@@ -1,9 +1,9 @@
 +font-face('Aeroport', '../fonts/Aeroport-Light', 300, )
 +font-face('Aeroport Mono', '../fonts/AeroportMono', )
-+font-face('Aeroport', '../fonts/Aeroport-Bold', 'bold', )
++font-face('Aeroport', '../fonts/Aeroport-Bold', bold, )
 +font-face('Aeroport', '../fonts/Aeroport-LightItalic', 300, italic )
-+font-face('Aeroport', '../fonts/Aeroport-BoldItalic', 'bold', italic )
-+font-face('Aeroport', '../fonts/Aeroport-MediumItalic', '500', italic )
++font-face('Aeroport', '../fonts/Aeroport-BoldItalic', bold, italic )
++font-face('Aeroport', '../fonts/Aeroport-MediumItalic', 500, italic )
 +font-face('Aeroport', '../fonts/Aeroport', )
 //+font-face('Aeroport', '../fonts/Aeroport-Italic', 'normal', 'italic' )
 +font-face('Aeroport', '../fonts/Aeroport-Medium', 500, )
