--- a/dev/pug/context.pug
+++ b/dev/pug/context.pug
@@ -13,3 +13,5 @@ block content
     +taber(tabsAdStep, 'Этапы запуска рекламной кампании', 'light')
     +feedbackSlider(metrix, 'Ключевые метрики', 'feedback--rules')
     include modules/consult-form
+    include modules/estore-popup
+
