--- a/dev/static/styles/modules/modules.sass
+++ b/dev/static/styles/modules/modules.sass
@@ -25,6 +25,10 @@
         +xs-block()
             font-size: 30px
             line-height: 40px
+        &--one-word
+            font-size: 100px
+            line-height: 105px
+
 
 
 .h1.page-title__text--post
