--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -203,6 +203,9 @@ ol:not([class])
     +sm-block()
         display: flex !important
 
+.full-block--blue
+    background-color: $accent
+
 .page-form
     padding-top: 40px
     padding-bottom: 40px
