--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -383,6 +383,26 @@
     ]
 
 -
+    var tabsMainSteps = [
+        {
+            title: 'Подготовка',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Внешняя оптимизация',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Внутренняя оптимизация',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Поведенческие факторы',
+            text: `<p>Анализ ресурса, конкурентов, целевой аудитории.</p><p>Составление плана продвижения по полученным данным.</p><p>Аудит технического состояния сайта.</p><p>Доработки по результатам аудита, приведение сайта к полной технической исправности для лучших показателей индексации и ранжирования в поисковых системах.</p>`,
+        },
+    ]
+
+-
     var tabsContext = [
         {
             title: 'Реклама в Яндекс Директ',
@@ -1179,38 +1199,52 @@
     var posts = [
         {
             title: `Дизайн, основанный на опыте пользователя`,
-            type: `Интернет-маркетинг`,
+            date: `Интернет-маркетинг`,
             link: `#`,
             img: `design.jpg`,
         },
         {
             title: `Вся правда про SSL-сертификаты`,
-            type: `Разработка`,
+            date: `Разработка`,
             link: `#`,
             img: `ssl.jpg`,
         },
         {
             title: `A/B тестирование  и оптимизация страниц`,
-            type: `Разработка`,
+            date: `Разработка`,
             link: `#`,
             img: `abtest.jpg`,
         },
         {
             title: `Дизайн, основанный на опыте пользователя`,
-            type: `Интернет-маркетинг`,
+            date: `Интернет-маркетинг`,
             link: `#`,
             img: `design.jpg`,
         },
         {
             title: `A/B тестирование и оптимизация страниц`,
-            type: `Разработка`,
+            date: `Разработка`,
             link: `#`,
             img: `abtest.jpg`,
         },
         {
             title: `Вся правда про SSL-сертификаты`,
-            type: `Интернет-маркетинг`,
+            date: `Интернет-маркетинг`,
             link: `#`,
             img: `ssl.jpg`,
+        },
+        {
+            title: `Требования к медицинским сайтам – полный обзор`,
+            date: `20 ноября 2020`,
+            link: `#`,
+            img: `post7.png`,
+            press: true
+        },
+        {
+            title: `SEO-продвижение в нише «медицинские услуги» на конкретных примерах`,
+            date: `21 ноября 2020`,
+            link: `#`,
+            img: `post8.jpg`,
+            press: true
         },
     ]
