--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -116,7 +116,7 @@ mixin portfolioCard(arr)
 
 mixin post-card(post)
     .b-post-card
-        ._category= post.type
+        ._category= post.date
         a(href= post.link, title= post.title, style=`background-image: url(images/content/${post.img})`)._img
         a(href= post.link, title= post.title)._name= post.title
 
