Styling page-title blue

--- a/dev/pug/med-site.pug
+++ b/dev/pug/med-site.pug
@@ -8,8 +8,8 @@ block variables
 block content-full
     include modules/page-title-blue
 block content
-    +badges(supportBadges)
-    include modules/topcases
+    +badges(medBadges)
+    include pages/med-site/two-col
     +avideo(promAvideo)
     +taber(tabsMainSteps, 'Основные этапы работы', 'light')
     include pages/med-site/latest-post
