--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -831,6 +831,26 @@
     }
 
 -
+    var medBadges = {
+        text: `Целью продвижения медицинского сайта является увеличение: <br>— количества заявок; <br>— записей на прием; <br>— переходов из поисковых систем. <br>Работа с профессионалами дает следующие преимущества.`,
+        badges: [
+            {
+                icon: 'bitrix-small',
+                desc: 'Авторская методика продвижения сайтов',
+            },
+            {
+                icon: 'bitrix-small',
+                desc: 'ТОП16 в рейтинге SEO Глазами Клиентов 2019',
+            },
+            {
+                icon: 'garant',
+                desc: 'Финансовые гарантии!',
+            },
+        ]
+
+    }
+
+-
     var contextBadges = {
         text: 'Настройка и ведение контекстной рекламы в Яндекс.Директ и Google Adwords — это не только грамотный подбор ключевых запросов с периодическим расширением их перечня, написание продающих текстов объявлений, выбор оптимальной стратегии управления ставками и работа над их оптимизацией, но и умение прогнозировать ход рекламных кампаний в сети интернет исходя из полученных результатов.',
         badges: [
