--- a/dev/pug/modules/page-title-blue.pug
+++ b/dev/pug/modules/page-title-blue.pug
@@ -1,11 +1,15 @@
 section.section.section--blue
     .b-page-title
       - var newStr = title.split(' ')
-        h1.h1._text.-one-word
-          each str, key in newStr
-              if key === 0
-                  | !{str}
-              else
-                  br
-                  span= str
-
+      h1.h1._text.-one-word
+        each str, key in newStr
+            if key === 0
+                | !{str}
+            else
+                br
+                span= str
+      button.b-btn.-flat.-light._btn.-big-title Заказать продвижение
+      ._price от 15 000 ₽*
+      ._small-text
+          p._small-item * Скидка 3, 6, 12% на услугу SEO при оплате 3, 6 и 12 месяцев соответственно
+          p._small-item ** 1 месяц в подарок при оплате 6 месяцев
