Add advantages block

--- a/dev/pug/med-site.pug
+++ b/dev/pug/med-site.pug
@@ -10,6 +10,7 @@ block content-full
 block content
     +badges(medBadges)
     include pages/med-site/two-col
+    include pages/med-site/advantages
     +avideo(promAvideo)
     +taber(tabsMainSteps, 'Основные этапы работы', 'light')
     include pages/med-site/latest-post
