--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -1268,3 +1268,27 @@
             press: true
         },
     ]
+
+-
+    var advantages = [
+        {
+            title: `Проверенная стратегия`,
+            text: `Чтобы быстро получить первые результаты в виде новых посетителей, нужно как можно скорее запустить проект. Один специалист может потратить часы и дни на кластеризацию запросов и ручной подбор посадочный страниц. Наша компания автоматизировала эти и другие рутинные процессы.`,
+            icon: `advantages-up`,
+        },
+        {
+            title: `Семантика`,
+            text: `На стартовом этапе лучше остановиться на узких и региональных запросах. Такой шаг позволит снизить конкуренцию. Достигнув топа выдачи по этим запросам, можно скорректировать семантическое ядро, обратившись к более конкурентным и частотным запросам. Эта тактика, которая позволит получить больше отдачи от раскрутки.`,
+            icon: `advantages-diamond`,
+        },
+        {
+            title: `Опыт в тематике`,
+            text: `Медицинские сайты в продвижении имеют свою специфику. Они подчиняются правилам, закрепленным законодательно, существует масса нюансов. Мы специализируемся на медицинских сайтах, наши специалисты обладают навыками и наработками в этой сфере.`,
+            icon: `advantages-garant`,
+        },
+        {
+            title: `Одна команда с клиентом`,
+            text: `Мы проходим всю дорогу вместе с заказчиком, информируем обо всем — от переноса кнопки до изменения цветовой гаммы меню, внимательно выслушиваем предложения и отвечаем на вопросы. С вами всегда на связи персональный менеджер.`,
+            icon: `advantages-target`,
+        },
+    ]
