Add price-table block

--- a/dev/pug/med-site.pug
+++ b/dev/pug/med-site.pug
@@ -11,6 +11,7 @@ block content
     +badges(medBadges)
     include pages/med-site/two-col
     include pages/med-site/advantages
+    include pages/med-site/price-table
     +avideo(promAvideo)
     +taber(tabsMainSteps, 'Основные этапы работы', 'light')
     include pages/med-site/latest-post
