--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -1292,3 +1292,117 @@
             icon: `advantages-target`,
         },
     ]
+
+-
+    var priceTable = [
+        {
+            id: 'basic',
+            popular: false,
+            title: `Тариф «Базовый»`,
+            text: `Решение разработано для эффективного привлечения целевого органического трафика из региональной выдачи, включает в себя необходимый набор для привлечения клиентов из Яндекса и Google.`,
+            features: [
+                {
+                    name: 'Детальная аналитика',
+                    list: [
+                        'Проводим бесплатный аудит сайта',
+                        'Прогнозируем охват и вывод запросов в топ',
+                        'Ежеквартально осуществляем аудит юзабилити',
+                    ]
+                },
+                {
+                    name: 'Эффективные решения',
+                    list: [
+                        'Продвигаем 200 запросов',
+                        'Исправляем ошибки оптимизации',
+                        'Ежеквартально бесплатно расширяем семантическое ядро',
+                        'Настраиваем call-tracking',
+                        'Проводим необходимые доработки по юзабилити',
+                        'Продвигаем сайты в Яндексе, Google',
+                    ]
+                },
+                {
+                    name: 'Прозрачная отчетность',
+                    list: [
+                        'Ежемесячно предоставляем детальные отчеты о проделанной работе',
+                        'Отчет по позициям всегда доступен в личном кабинете',
+                    ]
+                },
+            ],
+            price: 15000
+        },
+        {
+            id: 'optima',
+            popular: true,
+            title: `Тариф «Оптима»`,
+            text: `Решение дает возможность быстрее получать целевой трафик из поисковых систем, включает в себя оптимальный набор работ для привлечения клиентов из Яндекса и Google.`,
+            features: [
+                {
+                    name: 'Детальная аналитика',
+                    list: [
+                        'Проводим бесплатный аудит сайта',
+                        'Прогнозируем охват и вывод запросов в топ',
+                        'Ежеквартально осуществляем аудит юзабилити',
+                        'Ежеквартально анализируем эффективность канала SEO',
+                        'Проводим ежеквартальный анализ репутации в выдаче',
+                    ]
+                },
+                {
+                    name: 'Эффективные решения',
+                    list: [
+                        'Продвигаем 300 запросов',
+                        'Исправляем ошибки оптимизации',
+                        'Ежеквартально бесплатно расширяем семантическое ядро',
+                        'Настраиваем call-tracking',
+                        'Проводим необходимые доработки по юзабилити',
+                        'Продвигаем сайты в Яндексе, Google',
+                    ]
+                },
+                {
+                    name: 'Прозрачная отчетность',
+                    list: [
+                        'Ежемесячно предоставляем детальные отчеты о проделанной работе',
+                        'Отчет по позициям всегда доступен в личном кабинете',
+                    ]
+                },
+            ],
+            price: 30000
+        },
+        {
+            id: 'vip',
+            popular: true,
+            title: `Тариф «VIP»`,
+            text: `Тариф объединяет лучшие инструменты продвижения, работы с повышением конверсии и репутацией. `,
+            features: [
+                {
+                    name: 'Детальная аналитика',
+                    list: [
+                        'Проводим бесплатный аудит сайта',
+                        'Прогнозируем охват и вывод запросов в топ',
+                        'Ежемесячно осуществляем аудит юзабилити',
+                        'Проводим ежеквартальный анализ: репутации в выдаче, целевой аудитории, торгового предложения',
+                        'Ежемесячно выявляем проблемы в рекламной кампании, звонках и воронке продаж',
+                    ]
+                },
+                {
+                    name: 'Эффективные решения',
+                    list: [
+                        'Продвигаем 500 запросов',
+                        'Исправляем ошибки оптимизации',
+                        'Ежеквартально бесплатно расширяем семантическое ядро',
+                        'Настраиваем call-tracking',
+                        'Проводим необходимые доработки по юзабилити',
+                        'Продвигаем сайты в Яндексе, Google, Яндекс mobile, Google mobile',
+                        'Размещаем 5 отзывов на сайте ежемесячно',
+                    ]
+                },
+                {
+                    name: 'Прозрачная отчетность',
+                    list: [
+                        'Ежемесячно предоставляем детальные отчеты о проделанной работе',
+                        'Отчет по позициям всегда доступен в личном кабинете',
+                    ]
+                },
+            ],
+            price: 50000
+        },
+    ]
